# shinnikCV

./: .gitignore  CMakeLists.txt  ReadMe.md  create_project.bat
RTSD_build/data/: main_road.svm_train_result.txt  mandatory.svm  prohibitory.svm  prohibitory.svm_train_result.txt
src/: CMakeLists.txt  classificatorRoadSign.cpp  classificatorRoadSign.hpp  detectorRoadSign.cpp  detectorRoadSign.hpp  main.cpp
test/: config.ini  exe.py  main.py
test/data/ideal/: 00.csv  01.csv  02.csv  03.csv  04.csv  05.csv  06.csv  07.csv  08.csv  09.csv  10.csv  11.csv  12.csv  13.csv  14.csv  15.csv  16.csv  17.csv  18.csv  19.csv  20.csv  21.csv  22.csv  23.csv  24.csv  25.csv  26.csv  27.csv  28.csv  29.csv  30.csv  31.csv  32.csv  33.csv  5.csv  54.csv  55.csv  56.csv  57.csv  58.csv  (+6 more)
test/data/ideal_crop/: 0_0.csv  100_5.csv  101_0.csv  102_1.csv  103_2.csv  104_0.csv  105_1.csv  106_2.csv  107_0.csv  108_1.csv  109_2.csv  10_5.csv  110_3.csv  111_4.csv  112_5.csv  113_6.csv  114_0.csv  115_1.csv  116_2.csv  117_3.csv  118_4.csv  119_0.csv  11_0.csv  120_1.csv  121_2.csv  122_3.csv  123_4.csv  124_5.csv  125_6.csv  126_7.csv  127_8.csv  128_0.csv  129_1.csv  12_1.csv  130_2.csv  131_3.csv  132_4.csv  133_5.csv  134_6.csv  135_7.csv  (+195 more)
transito-cv/data/: blue_border.svm  blue_border.svm_train_result.txt  blue_rect.svm  blue_rect.svm_train_result.txt  danger.svm  danger.svm_train_result.txt  main_road.svm  mandatory.svm_train_result.txt
transito-cv/src/: detect.cpp  hog_detector.cpp  hr_timer.cpp  hr_timer.h  view_hog.cpp
(+2 files in other folders)
